@@ -8,6 +8,8 @@ DEBUG_MODE = DEBUG_MODE.lower() in truevals
 
 PROD_MODE = not DEBUG_MODE
 
+VALIDATION = DEBUG_MODE
+
 DISABLE_I18N_KEY = 'Z3C_PT_DISABLE_I18N'
 DISABLE_I18N = os.environ.get(DISABLE_I18N_KEY, 'false')
 DISABLE_I18N = DISABLE_I18N.lower() in truevals
